# RTX_earth

./: .gitignore  CMakeLists.txt  README.md  download.sh  makefile
data/: NASA_DEM.txt
include/: HeightMap.h  callback.h  unzip.h
src/: HeightMap.cpp  load.cpp  main.cpp  unzip.cpp
